Fix header alignments

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,5 +7,5 @@ body {
 }
 
 header {
-    height: 300px
+    height: 300px;
 }
